# trifunctors

./: README.md  package.yaml  trifunctors.cabal
.github/workflows/: haskell.yml
